# UDS_20_ml_genai

./: main.py  pyproject.toml
BATCH_01/NLP-for-ML/: 00_Introduction_to_NLP_for_ML.ipynb  01_Text_Preprocessing.ipynb  02_Text_Representation.ipynb  03_POS_Tagging.ipynb  04_Named_Entity_Recognition.ipynb  05_Word_Embeddings.ipynb  06_Word2Vec.ipynb  README.md  notes.ipynb  requirements.txt
BATCH_02/00_fundamentals/Database/: mynotes.ipynb
BATCH_02/00_fundamentals/FeatureEnginnering/: livenotes.ipynb
BATCH_02/00_fundamentals/PYTHON/: regex.ipynb
BATCH_02/00_fundamentals/STATISTICS/: practise.ipynb  statistics_probability_course.ipynb
BATCH_02/00_fundamentals/intermediate_Advance/: 1_oops_deep_dive.ipynb  1_oops_deep_dive_exercises.ipynb
BATCH_02/01_feature_enginnering/01_2204/: 22-04-2026.ipynb
BATCH_02/01_feature_enginnering/02_2504/: 25-04-2026.ipynb
BATCH_02/01_feature_enginnering/03_2604/: 26-04-2026.ipynb
BATCH_02/01_feature_enginnering/04_2904/: 29-04-2026.ipynb
BATCH_02/01_feature_enginnering/05_0205/: 02-05-2026.ipynb
BATCH_02/01_feature_enginnering/06_0305/: 03-05-2026.ipynb
BATCH_02/01_feature_enginnering/07_0905/: 09-05-2026.ipynb
BATCH_02/01_feature_enginnering/08_1305/: 13-05-2026.ipynb  13-05-2026_diabetes.ipynb
BATCH_02/02_EDA/01_1605/: EDA-1.ipynb  diabetes-FE-9.ipynb
BATCH_02/02_EDA/02_1705/: EDA-1.ipynb  EDA-2.ipynb
BATCH_02/GIT/: github_migration.ipynb
BATCH_02/intermediate_Advance/: 1_oops_deep_dive.ipynb  1_oops_deep_dive_expanded.ipynb
BATCH_02/youtube/: main.py  subscriptions.csv  test.ipynb  unsubscribe_all.py
(+121 files in other folders)
